# example-clion-cmake-libgcrypt

./: CMakeLists.txt  CMakeLists.txt.bruteforce  README.md  config.c  dg_gcry.c  dg_gcry.h  dg_get_configfile.c  dg_get_configfile.h  dg_init.c  dg_init.h  dg_logger.c  dg_logger.h  dg_pkcrypt.c  dg_pkcrypt.h  main.c  sample.cfg
cmake/modules/: FindLibgcrypt.cmake
